Форматирование текста Изображения

--- a/3. Стили/index.html
+++ b/3. Стили/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Стили</title>
+    <link rel="stylesheet" href="style.css">
     <style>
         h2 {
             color: #d63f35;
@@ -23,10 +24,11 @@
 
 <!-- Внутри тега -->
 <h2 style="color: #12FFAA;">Употребление молока</h2>
-<p>Специалисты из <a href="https://ru.wikipedia.org/wiki/Университет_Западного_Лондона" target="_blank">Университета Западного Лондона</a> связали употребление молока с увеличением роста и веса древних людей в
+<p>Специалисты из <a href="https://ru.wikipedia.org/wiki/Университет_Западного_Лондона" target="_blank">Университета
+    Западного Лондона</a> связали употребление молока с увеличением роста и веса древних людей в
     некоторых регионах 7000-2000 лет назад. Результаты работы описываются в статье, опубликованной в журнале PNAS.</p>
 <p>В процессе исследования были изучены рост и масса тела 3507 скелетов, возраст которых составляет около 25 тысяч лет.
-    Антропологи заметили, что между 15 и 10 тысячами лет назад люди по всей Евразии и Северо-Восточной Африке
+    Антропологи заметили, что между 15 и 10 тысячами лет назад люди по всей <span>Евразии</span> и <span>Северо-Восточной Африке</span>
     существенно потеряли в росте и весе.</p>
 </body>
 </html>
