Списки Блочная модель

--- a/5. Изображения/index.html
+++ b/5. Изображения/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <title>Изображения</title>
     <link rel="stylesheet" href="style.css">
+    <!-- Установка значка на вкладке браузера -->
+    <link rel="icon" href="images/favicon.ico" type="image/x-icon">
 </head>
 <!-- Изображение вставляется на сайт при помощи тега <img> -->
 <!--
