Блочная модель (II)

--- a/7. Блочная модель/index.html
+++ b/7. Блочная модель/index.html
@@ -8,18 +8,21 @@
 <!--
 В HTML элементы делятся на типы:
 1. Блочные (block) - занимают всю длину родительского компонента
+    <div>, <p>
 2. Строчные (inline) - имеют длину равную своему содержимому (content)
-3. Строчно-Блочные (inline-block) - ведут себя снаружи, как строчные, а внутри, как блочные
+    <span>, <img>, <a>
+3. Строчно-Блочные (inline-block) - ведут себя снаружи, как блочные, но размер определяется содержимым.
 Нельзя вкладывать блочные элементы внутрь строчных.
  -->
 <body>
     <p>Привет1</p>
-    <p>Привет2</p>
+    <p class="deleted">Привет2</p>
     <p>Привет3</p>
     <div>Привет4</div>
     <div>Привет5</div>
     <hr>
     <span>Привет6</span>
     <span>Привет7</span>
+    <div class="rounded">Привет 8</div>
 </body>
 </html>
