--- a/11. Формы/index.html
+++ b/11. Формы/index.html
@@ -48,7 +48,7 @@
         fieldset - группировка элементов
      -->
     <fieldset>
-        <legend>Языки прогарммирования</legend>
+        <legend>Языки программирования</legend>
         <div>
             <!--
                 radio - компонент выбора из нескольких вариантов (радио-кнопка)
