--- a/12. SVG/index.html
+++ b/12. SVG/index.html
@@ -8,7 +8,7 @@
 <!--
     SVG - Scalable Vector Graphics
     Способ создавать векторные графические объекты
-
+    TODO: Градиенты, Анимация
  -->
 <body>
     <!--
@@ -17,6 +17,8 @@
         stroke: граница
         fill: заполнение
         stroke-width: толщина границы
+        stroke-linecap: вид окончания линии
+        stroke-dasharray: формирование прерывистых линий
 
         rect - изображает прямоугольник
             rx, ry: скругление углов
@@ -43,18 +45,28 @@
         path - изображает сложные кривые
             M = перенос пера в координату
             L = перенос пера с рисованием линии
-            TODO:
-            H = horizontal lineto
-            V = vertical lineto
-            C = curveto
-            S = smooth curveto
-            Q = quadratic Bézier curve
-            T = smooth quadratic Bézier curveto
-            A = elliptical Arc
-            Z = closepath
+            H = перенос пера по горизонтали в заданную координату (указывается только координата x)
+            V = перенос пера по вертикали в заданную координату (указывается только координата y)
+            Кривые Безье
+            C = Кубическая кривая
+            S = Усложнённый тип кубической кривой
+            Q = Квадратичная кривая
+            T = Усложнённая квадратичная кривая
+            A = Дуга
+            Z = завершение пути (соединяет начальную и конечную точки)
 
      -->
     <svg class="svg-image" width="500" height="500">
+
+        <!--
+            Фильтры
+         -->
+        <defs>
+            <filter id="blur-1">
+                <feGaussianBlur in="SourceGraphic" stdDeviation="3" />
+            </filter>
+        </defs>
+
         <rect x="5" y="5" width="20" height="20" style="fill:#0000ff;stroke-width:3;stroke:#00ff99" />
         <rect class="rect-1" x="25" y="25" rx="5" ry="5" height="80" style="fill:rgb(0,0,255);stroke-width:3;stroke:#00ff99" />
         <!--
@@ -63,12 +75,14 @@
         -->
         <circle cx="100" cy="100" r="30" stroke="blue" fill="#ff0000" />
         <ellipse cx="150" cy="150" rx="20" ry="50" style="fill:#ddff03" />
-        <line x1="100" y1="150" x2="200" y2="200" stroke="black" stroke-width="3" />
+        <line x1="100" y1="150" x2="200" y2="200" stroke="black" stroke-width="10" stroke-linecap="round" />
         <polygon points="50,210 40,300 80,270 120,280" style="stroke:#d63f35;stroke-width:2" />
-        <polygon points="300,10 240,198 390,78 210,78 360,198" style="fill:lime;stroke:purple;stroke-width:5;fill-rule:evenodd;" />
+        <polygon points="300,10 240,198 390,78 210,78 360,198" filter="url(#blur-1)" style="fill:lime;stroke:purple;stroke-width:5;fill-rule:evenodd;" />
         <polyline points="150,210 140,300 180,270 220,280" style="fill:none;stroke:black;stroke-width:2" />
-        <path d="" />
+        <path d="M 50 350 L 50 350 L 60 450 H 150 V 350 Z" style="fill:none" stroke="black" stroke-width="2" />
+        <path d="M 250 350 C 300 200, 280 400, 400 350" style="fill:none" stroke="black" stroke-width="2" />
         <text x="125" y="15" fill="blue">SVG format</text>
+        <line x1="50" y1="470" x2="300" y2="470" stroke-dasharray="20,10,1,10" stroke="black" stroke-width="6" stroke-linecap="round" />
     </svg>
 </body>
 </html>
