--- a/13. Позиционирование/Задания/Горизонтальное меню/index.html
+++ b/13. Позиционирование/Задания/Горизонтальное меню/index.html
@@ -2,9 +2,28 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Меню</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+<ul id="main-menu" class="menu">
+    <li><a href="#">Главная</a></li>
+    <li><a href="#">Новости</a>
+        <ul class="dropdown-menu">
+            <li><a>Новые</a></li>
+            <li><a>Старые</a></li>
+            <li><a>Интересные</a></li>
+        </ul>
+    </li>
+    <li><a href="#">Контакты</a>
+        <ul class="dropdown-menu">
+            <li><a>Магазин</a></li>
+            <li><a>Фабрика</a></li>
+        </ul>
+    </li>
+    <li><a href="#">Товары</a></li>
+    <li><a href="#">О нас</a></li>
+</ul>
 
 </body>
 </html>
