--- a/17. Трансформации/index.html
+++ b/17. Трансформации/index.html
@@ -6,6 +6,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="block-1"></div>
+    <div class="block-1">
+        <div class="block-2"></div>
+    </div>
+
 </body>
 </html>
