--- a/17. Трансформации/index.html
+++ b/17. Трансформации/index.html
@@ -6,9 +6,20 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="block-1">
-        <div class="block-2"></div>
-    </div>
-
+<div class="wrapper">
+    <div class="translate-block"></div>
+</div>
+<div class="wrapper">
+    <div class="scale-block"></div>
+</div>
+<div class="wrapper">
+    <div class="rotate-block"></div>
+</div>
+<div class="wrapper">
+    <div class="skew-block"></div>
+</div>
+<div class="wrapper">
+    <div class="matrix-block"></div>
+</div>
 </body>
 </html>
