--- a/17. Трансформации/index.html
+++ b/17. Трансформации/index.html
@@ -7,19 +7,19 @@
 </head>
 <body>
 <div class="wrapper">
-    <div class="translate-block"></div>
+    <div class="translate-block">translate</div>
 </div>
 <div class="wrapper">
-    <div class="scale-block"></div>
+    <div class="scale-block">scale</div>
 </div>
 <div class="wrapper">
-    <div class="rotate-block"></div>
+    <div class="rotate-block">rotate</div>
 </div>
 <div class="wrapper">
-    <div class="skew-block"></div>
+    <div class="skew-block">skew</div>
 </div>
 <div class="wrapper">
-    <div class="matrix-block"></div>
+    <div class="matrix-block">matrix</div>
 </div>
 </body>
 </html>
